--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
   <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-  <h1>Hello World</h1>
+  <h1>Todo List</h1>
+  <button>Add</button><button>Remove</button>
+  <div class="todo-list">
+    
+  </div>
+  <script src="./main.js"></script>
 </body>
 </html>
