--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@
 <body>
   <h1>Todo List</h1>
   <button>Add</button><button>Remove</button>
-  <div class="todo-list">
-    
-  </div>
+  <div class="todo-list"> </div>
   <script src="./main.js"></script>
 </body>
 </html>
