--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
   <h1>Todo List</h1>
+  <h2>Hello</h2>
   <button>Add</button><button>Remove</button>
   <div class="todo-list"> </div>
   <script src="./main.js"></script>
