--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-  <h1>Todo List</h1>
+  <h1>Maor List</h1>
   <button>Add</button><button>Remove</button>
   <div class="todo-list"> </div>
   <script src="./main.js"></script>
